# libfastrollout

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: fastrollout_cnn_test.cpp  fastrollout_test.cpp
src/fastrollout/: fastrollout.cpp  fastrollout.hpp  fastrollout_cnn.hpp
